<resources>
    <string name="app_name">Iceberg</string>
    <string name="login_button_name">Login</string>
    <string name="signup_button_name">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username_hint">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>