<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignupFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="30sp"
                android:layout_marginLeft="30sp"
                android:layout_marginTop="15sp"
                android:background="@color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/usernameEntry"
                    style="@style/SignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/emailEntry"
                    style="@style/SignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/passwordEntry"
                    style="@style/SignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/confirmPasswordEntry"
                    style="@style/SignupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirm_password_hint"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="35sp"
                    android:gravity="center"
                    android:text="@string/signup_button_name"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>