<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_margin="30sp">

                <EditText
                    android:id="@+id/usernameEntry"
                    style="@style/LoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF" />

                <EditText
                    android:id="@+id/passwordEntry"
                    style="@style/LoginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="180sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30sp"
                    android:layout_marginBottom="40sp"
                    android:gravity="center"
                    android:text="@string/login_button_name"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</layout>